--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" href="#">Eventos y Talleres</a>
           <a class="nav-link " href="#">Autores</a>
-          <a class="nav-link ">Unete al Espejismo</a>
+          <a class="nav-link " href="#">Unete al Espejismo</a>
           <a class="nav-link active text-success" href="/Compras/compra.html" target="_blank">Comprar Escritos</a>
 
         </div>
@@ -121,6 +121,7 @@
           <p class="card-text">El Espejismo de las Palabras larga su segunda edición de "Infinitos Espejos". Su
             renombrado ciclo de talleres literarios se dara a cabo en formato digital a partir del mes de enero.</p>
           <a href="#" class="btn text-white border">Conocé más</a>
+          <iframe id="IFRAME " width="220" height="200" src="https://www.youtube.com/embed/1QYCWXdnssE?si=TkRpvoeo32yaOpB9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -174,7 +175,7 @@
     </ul>
   </div>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
